# v2

./: .gitattributes  .prettierignore  .prettierrc  CLAUDE.md  README.md  eslint.config.mjs  nx.json  package-lock.json  package.json  tsconfig.base.json
.claude/: settings.local.json
.cursor/: mcp.json
.cursor/commands/: build.md
.cursor/rules/: smart.mdc
.github/: .secrets.example
.github/workflows/: release-storage.yml
.zed/: settings.json
apps/auth-jwt-mo/: global-setup.ts  mops.toml  package-lock.json  package.json  project.json
apps/backend/: .gitignore  Caddyfile  Dockerfile  Dockerfile.backend  canister_ids.json  dfx.json  docker-compose.yml  mops.toml  networks.json  package-lock.json  package.json  project.json  tsconfig.json  vitest.config.ts
apps/encrypted-storage-mo/: .gitignore  Dockerfile  dfx.json  docker-compose.yml  docker-entrypoint.sh  global-setup.ts  mops.toml  package-lock.json  package.json  project.json
apps/icpay-webhooks-mo/: Dockerfile  README.md  dfx.json  docker-compose.yml  docker-entrypoint.sh  mops.toml  nginx.conf.template  package-lock.json  package.json  project.json  tsconfig.json
apps/permissions-mo/: README.md  dfx.json  global-setup.ts  mops.toml  (+4 more)
apps/tauri-app/: Cargo.toml  Info.plist  project.json  tauri.conf.json
apps/tauri-app/capabilities/: main.json
apps/tauri-app/src/: lib.rs  main.rs
docs/: STORAGE-UPGRADE.md  avatar-editor.mdc  create-profile.mdc  file-uploading.mdc  images.mdc  main-backend-actor.mdc  users.mdc  web-workers.mdc
mops-patches/: apply.sh  http-assets@0.2.0-fallback-cert.patch
(+1642 files in other folders)
