[package]
name = "rabbithole"
version = "0.2.0"
description = "Rabbithole App"
authors = ["khalik.faradzhli"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rabbithole_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.5", features = [] }

[dependencies]
tauri = { version = "2.2.5", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-deep-link = "2.2.0"
tauri-plugin-store = "2.2.0"
tauri-plugin-opener = "2.2.6"

[target."cfg(any(target_os = \"macos\", windows, target_os = \"linux\"))".dependencies]
tauri-plugin-single-instance = { version = "2.2.1", features = ["deep-link"] }
